# Terrux

./: CMakeLists.txt  compile_commands.json
.cache/clangd/index/: _fixes.hpp.23963DE42CAC96BD.idx  _vectorize.hpp.2D10ECAC3C77E625.idx  camera.hpp.9A25265AF519357F.idx  color.cpp.FB04D2B8E2A4C157.idx  color.hpp.C640DBBA4496A118.idx  common.hpp.235511F9AD0F4216.idx  compute_common.hpp.86E9054649C1A34C.idx  compute_vector_relational.hpp.F305CDED8562ED8D.idx  constants.hpp.1686585B84BC1A74.idx  constants.inl.94D794F67DD2E2CD.idx  context.c.614B80A797873823.idx  ebo.hpp.8D3F1EB11F1FD139.idx  egl_context.c.4BE89E2500AB8C3E.idx  egl_context.h.C5B6A054DF530147.idx  epsilon.hpp.9D6E3DB8F6212F68.idx  epsilon.inl.C5E003C8BBE228ED.idx  exponential.hpp.FDE60609787CBE03.idx  func_common.inl.ABA324E30AA07E3B.idx  func_exponential.inl.97FACBF90205BE48.idx  func_geometric.inl.AA375766BDC4DB91.idx  func_integer.inl.39C1713C91253714.idx  func_matrix.inl.BDD4508DCFC6C5D8.idx  func_packing.inl.87F273CF1C9170C5.idx  func_trigonometric.inl.BA563ADDE4807F87.idx  func_vector_relational.inl.03E3B24AA8A49850.idx  fwd.hpp.1618292A23FAFE29.idx  (+210 more)
src/: main.cpp
src/camera/: camera.cpp  camera.hpp
src/core/: tcore.hpp
src/game/: game.cpp  game.hpp
src/input/: input.cpp  input.hpp
src/math/: math.cpp  math.hpp
src/rect/: ndcrect.cpp  ndcrect.hpp  rect.cpp  rect.hpp
src/shader/: shader.cpp  shader.hpp
src/transform/: transform.hpp
src/txgl/: ebo.cpp  ebo.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp
src/util/: color.cpp  color.hpp  time.cpp  time.hpp
src/window/: window.cpp  window.hpp
(+10 files in other folders)
